# point

./: CMakeLists.txt  README.md
exec/: CMakeCache.txt  Makefile  Point  Point.cbp  TestDynamicAllocation  TestMovablePoint  TestSubstitution  cmake_install.cmake
src/: Circle.cpp  Circle.h  MovablePoint.cpp  MovablePoint.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  TestCast.cpp  TestDynamicAllcoation.cpp  TestMovablePoint.cpp  TestNew.cpp  TestShape.cpp  TestSubstitution.cpp  TestTypeID.cpp  main.cpp
